Fix sidebar overlapping content
Apply fix to stop the sidebar overlapping the main content.

--- a/src/AppleFitnessWorkoutMapper/wwwroot/static/css/styles.css
+++ b/src/AppleFitnessWorkoutMapper/wwwroot/static/css/styles.css
@@ -8,11 +8,6 @@ body {
 }
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
   padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
@@ -30,6 +25,7 @@ body {
   .sidebar-sticky {
     position: -webkit-sticky;
     position: sticky;
+    top: 48px;
   }
 }
 
